@@ -1,15 +1,15 @@
 package Streams;
 
-import java.util.Arrays;
 import java.util.List;
-
+import java.util.*;
+import java.util.stream.*;
 public class EvenNumbers {
-    public static List<Integer> filterEvenNumbers(List<Integer> numbers) {
-        return numbers.stream().filter(n->n%2==0).toList();
+    public static List<Integer> getEvenNumbers(List<Integer> numbers){
+        return numbers.stream().filter(n->n%2==0).collect(Collectors.toList());
     }
 
     public static void main(String[] args) {
-        List<Integer> numbers= Arrays.asList(2,5,4,78,4,97,72,56,6,7,97,33);
-        System.out.println(filterEvenNumbers(numbers));
+        List<Integer> numbers=Arrays.asList(5,3,2,8,6);
+        System.out.println(getEvenNumbers(numbers));
     }
 }
